fix: spacing issues

--- a/packages/excalidraw/components/TTDDialog/TTDDialog.scss
+++ b/packages/excalidraw/components/TTDDialog/TTDDialog.scss
@@ -51,7 +51,7 @@ $verticalBreakpoint: 861px;
     font-size: 15px;
     font-style: italic;
     font-weight: 500;
-    margin-bottom: 1.5rem;
+    margin-bottom: 0.5rem;
   }
 
   .ttd-dialog-info {
